--- a/backend/reactive/pom.xml
+++ b/backend/reactive/pom.xml
@@ -18,5 +18,10 @@
         <module>mail</module>
     </modules>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+    </dependencies>
 </project>
