--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>reactive</module>
         <module>system</module>
+        <module>common</module>
     </modules>
 
     <groupId>org.modules</groupId>
@@ -28,18 +29,17 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <fastjson>2.0.47</fastjson>
     </properties>
 
     <dependencyManagement>
         <dependencies>
-
+            <dependency>
+                <groupId>com.alibaba.fastjson2</groupId>
+                <artifactId>fastjson2</artifactId>
+                <version>${fastjson}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-        </dependency>
-    </dependencies>
 </project>
